Fix pagination position aligned to page bottom

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,6 +55,13 @@ body {
 
 }
 
+.pagination-block {
+  position: absolute;
+  bottom: $footer-height + 10;
+  left: 0;
+  width: 100%;
+}
+
 footer {
   position: absolute;
   bottom: 0;
